fix: More readable post styling

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -868,7 +868,7 @@ body {
       font-size: 1.2em; }
 
 .post-container .post-content {
-  width: 70%;
+  width: 65%;
   margin: 5% auto;
-  letter-spacing: 2px;
-  line-height: 120%; }
+  letter-spacing: 3px;
+  line-height: 140%; }
