--- a/public/styles/site/_post.scss
+++ b/public/styles/site/_post.scss
@@ -45,9 +45,9 @@
         }
     }
     .post-content {
-        width: 70%;
+        width: 65%;
         margin: 5% auto;
-        letter-spacing: 2px;
-        line-height: 120%;
+        letter-spacing: 3px;
+        line-height: 140%;
     }
 }
